# ai-powered-resume-builder

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 20250325025832_create_users_table.sql  20250325031859_create_resumes_table.sql
backend/src/: auth.rs  db.rs  gemini_service.rs  main.rs  models.rs  routes.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Auth.jsx  CreateResume.jsx  Register.jsx  ViewResumes.jsx  login.jsx
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Resume.jsx
frontend/src/styles/: Auth.css
