[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
hyper = "1.6.0"

