[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
hyper = "1.6.0"
argon2 = "0.5"
rand_core = "0.6"
password-hash = "0.5"
anyhow = "1.0.97"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
